fixed account css icon and text being misaligned

--- a/client/stylesheets/menu_pane/_account.scss
+++ b/client/stylesheets/menu_pane/_account.scss
@@ -4,7 +4,6 @@
     overflow: hidden;
     text-overflow: ellipsis;
     width: 300px;
-    display: inline-block;
   }
 
   .row {
